syntax = "proto3";

package lynx.protobuf.plugin.token.login;

option go_package = "github.com/go-lynx/lynx/plugin/token/login";

message jwt {
  string login_method = 1;
  string login_private_key = 2;
  string login_public_key = 3;
}